# SDwUP

./: .gitignore
behavioral/: CMakeLists.txt
behavioral/inc/: Huffman.hpp  platform_includes.hpp
behavioral/src/: Huffman.cpp  main.cpp
ip_repo/: .gitignore  edit_myip2_v1_0.xpr  vivado.jou  vivado_13404.backup.jou  vivado_352.backup.jou  vivado_6936.backup.jou
ip_repo/edit_myip2_v1_0.cache/wt/: webtalk_pa.xml
ip_repo/myip2_1.0/: component.xml
ip_repo/myip2_1.0/hdl/: myip2_v1_0_S00_AXI.v
proba4/: proba4.xpr  vivado.jou  vivado_12576.backup.jou  vivado_16056.backup.jou
proba4/proba4.cache/wt/: webtalk_pa.xml
proba4/proba4.hw/hw_1/: hw.xml
proba4/proba4.runs/.jobs/: vrs_config_1.xml  vrs_config_10.xml  vrs_config_106.xml  vrs_config_114.xml  vrs_config_119.xml  vrs_config_13.xml  vrs_config_15.xml  vrs_config_19.xml  vrs_config_230.xml  vrs_config_240.xml  vrs_config_257.xml  vrs_config_28.xml  vrs_config_4.xml  vrs_config_7.xml
proba4/proba4.runs/cotex_design_coder_0_0_synth_1/: vivado.pb
proba4/proba4.runs/cotex_design_processing_system7_0_0_synth_1/: vivado.pb
proba4/proba4.runs/cotex_design_rst_ps7_0_100M_0_synth_1/: vivado.pb
proba4/proba4.runs/impl_1/: cotex_design_wrapper.tcl  cotex_design_wrapper.vdi  cotex_design_wrapper_13004.backup.vdi  cotex_design_wrapper_13556.backup.vdi  cotex_design_wrapper_13808.backup.vdi  cotex_design_wrapper_2040.backup.vdi  cotex_design_wrapper_9440.backup.vdi  cotex_design_wrapper_clock_utilization_routed.rpt  cotex_design_wrapper_control_sets_placed.rpt  cotex_design_wrapper_drc_opted.rpt  gen_run.xml  (+27 more)
(+133 files in other folders)
